syntax = "proto3";
package bibleserver;

//import "google/protobuf/timestamp.proto";

option go_package = "go.bcc.media/bibleserver/proto";
option csharp_namespace = "BCCMedia.BibleServer";

message Verse {
	string id = 1;
	string text = 2;
	uint32 number = 3;
	map<string,string> footnotes = 4;
}

message GetVersesRequest {
	string bible_id = 1;
	uint32 book_id = 2;
	uint32 chapter = 3;
	uint32 verse_from = 4;
	uint32 verse_to = 5;
}

message GetVersesResponse {
	repeated Verse verses = 1;
}

service BibleServer {
	rpc GetVerses(GetVersesRequest) returns (GetVersesResponse);
}
